# taskord

./: .env  .excalidraw  .gitignore  README.md  components.json  go.work  nx.json  package.json  pnpm-lock.yaml  schema.graphql  tailwind.config.cjs  tailwind.config.js  tsconfig.base.json  tsconfig.json
.github/workflows/: rust-actions.yml  rust-deploy.yml  rust-test.yml
app/: layout.tsx  page.tsx
apps/data-modeling/: index.html  postcss.config.js  project.json  tailwind.config.cjs  tailwind.config.js  vite.config.ts
apps/server/: go.mod  main.go  main_test.go  project.json
apps/shared/: project.json
apps/web/: .env  .eslintrc.json  next.config.cjs  tailwind.config.js  tsconfig.json
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml
backend/migrations/: 20231006232754_add_tasks_table.up.sql  20231008030046_add_user_table.up.sql  20231017174821_add_projects_and_tags.down.sql  20231017174821_add_projects_and_tags.up.sql  20231022031334_add_due_date_to_task.down.sql  20231022031334_add_due_date_to_task.up.sql
backend/src/: main.rs
backend/src/graphql/: errors.rs  guards.rs  mod.rs  mutations.rs  queries.rs  schema.rs  subscriptions.rs
backend/src/models/: mod.rs  project.rs  tag.rs  task.rs  user.rs
components/: Header.tsx  TaskCard.tsx
prisma/: schema.prisma
src/: middleware.ts  store.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Modal.tsx  SignInButton.tsx  SignInForm.tsx  TaskCard.tsx  TaskModal.tsx  TaskWidget.tsx  header.tsx  layout.tsx
src/graphql/: client.ts  mutations.ts  queries.ts
(+97 files in other folders)
