[package]
name = "taskord"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls", "chrono", "macros"] }
async-graphql = { version = "6.0.7", features = ["chrono"] }
async-graphql-axum = "6.0.7"
chrono = "0.4.31"
dotenv = "0.15.0"
